Sun Nov 21 20:42:59 2004  Ciju John  <john_c@ociweb.com>

        * notify_serv.mpb:
          event_serv dependency was missing.

Sun Nov 21 15:56:48 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Any/ProxyPushConsumer.h:
        * orbsvcs/orbsvcs/Notify/Any/ProxyPushConsumer.cpp:

        * orbsvcs/orbsvcs/Notify/Sequence/SequenceProxyPushConsumer.h:
        * orbsvcs/orbsvcs/Notify/Sequence/SequenceProxyPushConsumer.cpp:

        * orbsvcs/orbsvcs/Notify/Structured/StructuredProxyPushConsumer.h:
        * orbsvcs/orbsvcs/Notify/Structured/StructuredProxyPushConsumer.cpp:
          Explicitly override init method in order to direct it down the
          correct leg of the diamond inheritence tree.

Sun Nov 21 11:48:50 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Request_Context_Repository.cpp:
          Unused ENV parameter

Sun Nov 21 11:43:00 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Admin.cpp:
        * orbsvcs/orbsvcs/Notify/Any/AnyEvent.cpp:
        * orbsvcs/orbsvcs/Notify/Consumer.cpp:
        * orbsvcs/orbsvcs/Notify/EventTypeSeq.cpp:
          Unused ENV parameters

        * orbsvcs/orbsvcs/Notify/Method_Request_Event.cpp:
          method was defined in both .i and .cpp


Sat Nov 20 09:45:44 2004  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/Sequence_Unit_Tests/run_test.pl:
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:
        * tests/Sequence_Unit_Tests/object_reference_sequence_element_ut.cpp:
          New unit test for elements in object reference sequences
          (i.e. the class returned by operator[])

        * tests/Sequence_Unit_Tests/object_reference_sequence_element.hpp:
          The class returned by operator[] in sequences of object
          references.

        * tests/Sequence_Unit_Tests/mock_reference.hpp:
        * tests/Sequence_Unit_Tests/mock_reference.cpp: