@@ -59,7 +59,7 @@ public:
   // override and hide derived init methods and
   // explicitly direct the init call down the correct
   // leg of the d**n diamond.
-  virtual void init (TAO_Notify_SupplierAdmin *supplier_admin);
+  virtual void init (TAO_Notify_SupplierAdmin *supplier_admin ACE_ENV_ARG_DECL);
 
 protected:
   ///= Data Members
