@@ -133,7 +133,8 @@ TAO_Notify_StructuredProxyPushConsumer::load_attrs (const TAO_Notify::NVPList& a
 }
 
 void
-TAO_Notify_StructuredProxyPushConsumer::init (TAO_Notify_SupplierAdmin *supplier_admin)
+TAO_Notify_StructuredProxyPushConsumer::init (TAO_Notify_SupplierAdmin *supplier_admin
+                                              ACE_ENV_ARG_DECL)
 {
-  TAO_Notify_ProxyConsumer::init (supplier_admin);
+  TAO_Notify_ProxyConsumer::init (supplier_admin ACE_ENV_ARG_PARAMETER);
 }
